--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -8,6 +8,8 @@
   <title>{% block title %}{% endblock %}</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="object-src 'self' https://elab.utu.fi;">
+
 
   <link rel="shortcut icon" href="#" />
 
